Fix gradlew permissions for execution on Linux runner

--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Capacitor Sync
         run: npx cap sync
 
+      - name: Fix Gradlew Permissions
+        run: chmod +x android/gradlew
+
       - name: Build APK with Gradle
         working-directory: android
         run: ./gradlew assembleDebug
